<resources>
    <string name="app_name">SocioPlay</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_map">map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="string_password">Password</string>
    <string name="string_password_Re">Confirm Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Username">Username</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="email_Exists">Email Already Exists!</string>
    <string name="User_Exists">Username Already Exists!</string>
    <string name="error_incorrect">Invalid Username or Password!</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="Log_out">Logout</string>
    <string name="ResetP">Forgot Password?</string>
    <string name="ResetPorU">Forgot Password or Username?</string>
    <string name="Request">Request To Change</string>
    <string name="OR">OR</string>
    <string name="Usernameforp">Enter Username to Recover Password.</string>
    <string name="prompt_emailforu">Enter Email-ID to Recover Username.</string>
    <string name="profile">Profile</string>
    <string name="Chats">Chats</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="title_activity_rview">Rview</string>
    <string name="prompt_mail">Enter Email ID</string>
</resources>
